--- a/.github/workflows/validate-templates.yml
+++ b/.github/workflows/validate-templates.yml
@@ -21,13 +21,7 @@ jobs:
       - name: Check YAMLs
         run: |
           pipx install yq || true
-          find . -type f \( -name '*.yml' -o -name '*.yaml' \) -print0 \
-            | xargs -0 -I{} python - <<PY
-import yaml,sys,os
-p=sys.argv[1]
-yaml.safe_load(open(p))
-print(f"ok: {p}")
-PY {}
+          find . -type f -name '*.yml' -o -name '*.yaml' | xargs -r -I{} python -c "import yaml,sys; yaml.safe_load(open('{}'))"
       - name: List templates
         run: |
           find templates -type f | sort
