--- a/repos.yml
+++ b/repos.yml
@@ -1,22 +1,9 @@
-# Quelle der Repos für Fleet-Operationen.
-# Du kannst entweder harte Listen pflegen ODER automatisch via GitHub-API ziehen.
-
-# Modus: static | github
-mode: github
-
-# Wenn mode=static, dann hier pflegen:
-static:
-  include:
-    - weltgewebe
-    - hauski
-    - hauski-audio
-    - semantAH
-    - wgx
-  exclude:
-    - vault-gewebe  # bleibt privat, wird NICHT angefasst
-
-github:
-  owner: alexdermohr
-  include_forks: false
-  exclude:
-    - vault-gewebe
+# Repos, die vom Metarepo Templates bekommen
+repos:
+  - weltgewebe
+  - hauski-audio
+  - semantAH
+  - wgx
+  - hauski
+# exclude:
+#   - vault-gewebe
