--- a/.github/workflows/ci-shellcheck.yml
+++ b/.github/workflows/ci-shellcheck.yml
@@ -1,19 +1,35 @@
 name: ci-shellcheck
+
 on:
   push:
-    paths: ["scripts/**", ".github/workflows/ci-shellcheck.yml"]
+    paths:
+      - '**/*.sh'
+      - '.github/workflows/ci-shellcheck.yml'
   pull_request:
-    paths: ["scripts/**", ".github/workflows/ci-shellcheck.yml"]
+    paths:
+      - '**/*.sh'
+      - '.github/workflows/ci-shellcheck.yml'
+  workflow_dispatch:
+
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
-      - name: Install shellcheck
-        run: sudo apt-get update && sudo apt-get install -y shellcheck
-      - name: Lint scripts
+
+      - name: Install ShellCheck
+        run: sudo apt-get update -yqq && sudo apt-get install -yqq shellcheck
+
+      - name: Run ShellCheck on tracked scripts
         run: |
-          for file in scripts/*; do
-            [ -f "$file" ] || continue
-            shellcheck "$file"
-          done
+          set -euo pipefail
+
+          mapfile -t scripts < <(git ls-files '*.sh')
+
+          if [ "${#scripts[@]}" -eq 0 ]; then
+            echo "No shell scripts found."
+            exit 0
+          fi
+
+          shellcheck "${scripts[@]}"
