--- a/.github/workflows/heavy.yml
+++ b/.github/workflows/heavy.yml
@@ -17,13 +17,14 @@ jobs:
     name: Verify /ask availability
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    env:
+      ASK_ENDPOINT_URL: ${{ secrets.ASK_ENDPOINT_URL }}
+      METRICS_SNAPSHOT_URL: ${{ secrets.METRICS_SNAPSHOT_URL }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Query /ask endpoint (optional)
-        if: ${{ secrets.ASK_ENDPOINT_URL != '' }}
-        env:
-          ASK_ENDPOINT_URL: ${{ secrets.ASK_ENDPOINT_URL }}
+        if: ${{ env.ASK_ENDPOINT_URL != '' }}
         run: |
           set -euo pipefail
           curl --fail --show-error --location \
@@ -40,9 +41,7 @@ jobs:
           if-no-files-found: ignore
 
       - name: Fetch metrics snapshot (optional)
-        if: ${{ secrets.METRICS_SNAPSHOT_URL != '' }}
-        env:
-          METRICS_SNAPSHOT_URL: ${{ secrets.METRICS_SNAPSHOT_URL }}
+        if: ${{ env.METRICS_SNAPSHOT_URL != '' }}
         run: |
           set -euo pipefail
           curl --fail --show-error --location \
