--- a/repos.yml
+++ b/repos.yml
@@ -8,23 +8,47 @@ repos:
   - name: weltgewebe
     url: https://github.com/heimgewebe/weltgewebe
     default_branch: main
+    domain: aussen
+    scope: events
+    metrics:
+      enable: false
   - name: hauski
     url: https://github.com/heimgewebe/hausKI
     default_branch: main
+    domain: assistant
+    scope: policy
+    metrics:
+      enable: true
   - name: hauski-audio
     url: https://github.com/heimgewebe/hauski-audio
     default_branch: main
     depends_on:
       - hauski
+    domain: audio
+    scope: events
+    metrics:
+      enable: false
   - name: semantAH
     url: https://github.com/heimgewebe/semantAH
     default_branch: main
+    domain: insights
+    scope: export
+    metrics:
+      enable: false
   - name: wgx
     url: https://github.com/heimgewebe/wgx
     default_branch: main
+    domain: platform
+    scope: metrics
+    metrics:
+      enable: true
   - name: tools
     url: https://github.com/heimgewebe/tools
     default_branch: main
+    domain: tooling
+    scope: shared
+    metrics:
+      enable: false
 
 # exclude:
 #   - vault-gewebe
