--- a/.github/workflows/adr-lint.yml
+++ b/.github/workflows/adr-lint.yml
@@ -20,13 +20,30 @@ jobs:
       - name: Stale proposed ADRs (>7d)
         run: |
           set -e
+          fail=0
+          now_ts=$(date +%s)
           while IFS= read -r -d '' f; do
+            bn=$(basename "$f")
+            if [ "$bn" = "000-template.md" ]; then
+              continue
+            fi
             stat=$(grep -m1 '^Status:' "$f" | awk '{print tolower($2)}')
             date=$(grep -m1 '^Datum:' "$f" | awk '{print $2}')
-            if [ "$stat" = "proposed" ] && [ -n "$date" ]; then
-              days=$(( ( $(date +%s) - $(date -d "$date" +%s) ) / 86400 ))
+            if [ "$stat" = "proposed" ]; then
+              if ! [[ "$date" =~ ^[0-9]{4}-[0-9]{2}-[0-9]{2}$ ]]; then
+                echo "::error file=$bn::Invalid or missing Datum '$date' (expected YYYY-MM-DD)"
+                fail=1
+                continue
+              fi
+              if ! build_ts=$(date -d "$date" +%s); then
+                echo "::error file=$bn::Unable to parse Datum '$date'"
+                fail=1
+                continue
+              fi
+              days=$(( ( now_ts - build_ts ) / 86400 ))
               if [ $days -gt 7 ]; then
-                echo "::warning ::ADR $(basename "$f") is Proposed for $days days"
+                echo "::warning ::ADR $bn is Proposed for $days days"
               fi
             fi
           done < <(find docs/adr -maxdepth 1 -name '*.md' -print0)
+          exit $fail
