fix: allow tracking pinned yq binary

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 .env
 
 # local tooling bins (unpinned / developer-managed)
-tools/bin/
+# halte den Ordner selbst im Repo, aber lasse lokale Pins zu
+tools/bin/*
+!tools/bin/.gitkeep
+!tools/bin/yq
 
 # tmp
 tmp/
