--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # local tooling bins (unpinned / developer-managed)
 # halte den Ordner selbst im Repo, aber lasse lokale Pins zu
 tools/bin/*
+!tools/bin/yq
+!tools/bin/yq.sha256
 !tools/bin/.gitkeep
 
 # tmp
