--- a/templates/.github/workflows/wgx-smoke.yml
+++ b/templates/.github/workflows/wgx-smoke.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   smoke:
-    uses: alexdermohr/metarepo/.github/workflows/reusable-ci.yml@main
+    uses: heimgewebe/metarepo/.github/workflows/reusable-ci.yml@main
     with:
       run_lint: true
       run_tests: false
