--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -29,19 +29,23 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f package.json ]; then npm ci; fi
 
+      - name: Skip Justfile-dependent steps when missing Justfile
+        if: ${{ hashFiles('Justfile') == '' }}
+        run: echo "::notice::Kein Justfile gefunden – Just-Schritte übersprungen."
+
       - name: Lint
-        if: ${{ inputs.run_lint == true }}
+        if: ${{ inputs.run_lint == true && hashFiles('Justfile') != '' }}
         run: |
-          if just --summary 2>/dev/null | grep -q lint; then
+          if just --show lint >/dev/null 2>&1; then
             just lint
           else
             echo "::notice::Kein Lint-Target gefunden – übersprungen."
           fi
 
       - name: Test
-        if: ${{ inputs.run_tests == true }}
+        if: ${{ inputs.run_tests == true && hashFiles('Justfile') != '' }}
         run: |
-          if just --summary 2>/dev/null | grep -q test; then
+          if just --show test >/dev/null 2>&1; then
             just test
           else
             echo "::notice::Kein Test-Target gefunden – übersprungen."
