--- a/.github/workflows/org-assets.yml
+++ b/.github/workflows/org-assets.yml
@@ -3,18 +3,54 @@ name: Org assets
 permissions:
   contents: read
 
+defaults:
+  run:
+    shell: bash --noprofile --norc -euo pipefail {0}
+
 on:
   push:
     branches: [ main ]
+    paths:
+      - repos.yml
+      - scripts/generate_org_assets.py
+      - pyproject.toml
+      - uv.lock
+      - .github/workflows/org-assets.yml
   pull_request:
+    paths:
+      - repos.yml
+      - scripts/generate_org_assets.py
+      - pyproject.toml
+      - uv.lock
+      - .github/workflows/org-assets.yml
+
+concurrency:
+  group: org-assets-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - run: python scripts/generate_org_assets.py --repos-file repos.yml --index docs/org-index.md --graph docs/org-graph.mmd
-      - run: git diff --exit-code || (echo "::warning::Org assets changed – commit in this PR" && exit 1)
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/uv
+            .venv
+          key: ${{ runner.os }}-py311-uv-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-py311-uv-
+      - uses: astral-sh/setup-uv@v3
+      - run: uv sync --frozen
+      - run: uv run scripts/generate_org_assets.py --repos-file repos.yml --index docs/org-index.md --graph docs/org-graph.mmd
+      - name: Fail PR if org assets drift
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          git add -N docs/org-index.md docs/org-graph.mmd
+          git diff --exit-code -- docs/org-index.md docs/org-graph.mmd || (echo "::warning::Org assets changed – commit in this PR" && exit 1)
