--- a/.github/workflows/wgx-guard.yml
+++ b/.github/workflows/wgx-guard.yml
@@ -70,14 +70,12 @@ jobs:
 
       - name: (Optional) UV bootstrap (pyproject present)
         if: ${{ hashFiles('pyproject.toml') != '' }}
+        # Pin to a maintained major version to reduce supply-chain drift.
+        uses: astral-sh/setup-uv@v3
+
+      - name: Sync Python project with uv
+        if: ${{ hashFiles('pyproject.toml') != '' && !cancelled() }}
         run: |
-          curl -LsSf https://astral.sh/uv/install.sh -o install-uv.sh
-          # SHA256 for install.sh as of 2024-06-01; update if script changes
-          echo "b2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2  install-uv.sh" > install-uv.sh.sha256
-          sha256sum -c install-uv.sh.sha256
-          if [ $? -ne 0 ]; then echo "::error::install.sh checksum failed"; exit 1; fi
-          sh install-uv.sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
           uv --version
           uv sync --frozen
 
