chore(workflows): generalize lychee cache key

--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -22,17 +22,16 @@ jobs:
   lychee:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - name: Cache lychee URL state
         uses: actions/cache@v4
         with:
           path: ~/.cache/lychee
-          key: ${{ runner.os }}-lychee-v0.14.3-${{ hashFiles('.lychee.toml', 'README.md', 'docs/**/*.md') }}
+          key: ${{ runner.os }}-lychee-${{ hashFiles('.lychee.toml', 'README.md', 'docs/**/*.md') }}
           restore-keys: |
-            ${{ runner.os }}-lychee-v0.14.3-
             ${{ runner.os }}-lychee-
       - name: Run lychee on docs & README
-        uses: lycheeverse/lychee-action@v1.10.0
+        uses: lycheeverse/lychee-action@v2
         with:
           args: --config .lychee.toml --no-progress README.md docs/**/*.md
           fail: true
