ci: inline contents-read permissions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: CI
 # Linked ADR: docs/adrs/ADR-0001-toolchain-strategy.md
 
-permissions:
-  contents: read  # Limit default token scope for least privilege.
+permissions: { contents: read }  # Limit default token scope for least privilege.
 
 on:
   push:
@@ -60,7 +59,7 @@ jobs:
       RUSTDOCFLAGS: "-Dwarnings"
     steps:
       - name: Checkout repository
-        # Pin statt Tag, um Tag-Drift zu vermeiden. Commit entspricht v4.
+        # Commit-Pin (entspricht v4), verhindert Tag-Drift
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a96968112b
         with:
           fetch-depth: 0
@@ -86,38 +85,48 @@ jobs:
 
       - name: Ensure yq is available
         run: |
+          set -euo pipefail
           mkdir -p "$HOME/.local/bin"
           export YQ_VERSION="${YQ_VERSION:?YQ_VERSION not set}"
           if [[ -x scripts/tools/yq-pin.sh ]]; then
             scripts/tools/yq-pin.sh ensure
           elif ! command -v yq >/dev/null; then
-            OS=$(uname -s | tr '[:upper:]' '[:lower:]')
-            ARCH=$(uname -m)
-            case "$ARCH" in
+            OS="$(uname -s | tr '[:upper:]' '[:lower:]')"
+            ARCH_RAW="$(uname -m)"
+            case "$ARCH_RAW" in
               x86_64) ARCH="amd64" ;;
               arm64|aarch64) ARCH="arm64" ;;
-              *) echo "Unsupported architecture for yq: $ARCH" >&2; exit 1 ;;
+              *) echo "Unsupported architecture: $ARCH_RAW" >&2; exit 1 ;;
             esac
-            URL="https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_${OS}_${ARCH}"
-            CHECKSUM_URL="${URL}.sha256"
+            YQ_VERSION_TRIMMED="${YQ_VERSION#v}"
+            YQ_URL="https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION_TRIMMED}/yq_${OS}_${ARCH}"
+            YQ_SHA_URL="${YQ_URL}.sha256"
             TMP_YQ="$(mktemp)"
             TMP_SHA="${TMP_YQ}.sha"
-            trap 'rm -f "${TMP_YQ}" "${TMP_SHA}"' EXIT
-            curl -LsSf "$URL" -o "$TMP_YQ"
-            curl -LsSf "$CHECKSUM_URL" -o "$TMP_SHA"
-            EXPECTED="$(cut -d' ' -f1 "$TMP_SHA")"
+            cleanup() { rm -f "${TMP_YQ}" "${TMP_SHA}"; }
+            trap cleanup EXIT
+            echo "Downloading yq ${YQ_VERSION_TRIMMED} from ${YQ_URL}"
+            curl -LsSf "${YQ_URL}" -o "${TMP_YQ}"
+            curl -LsSf "${YQ_SHA_URL}" -o "${TMP_SHA}"
+            EXPECTED_SHA="$(cut -d' ' -f1 "${TMP_SHA}")"
             if command -v sha256sum >/dev/null; then
-              ACTUAL="$(sha256sum "$TMP_YQ" | awk '{print $1}')"
+              ACTUAL_SHA="$(sha256sum "${TMP_YQ}" | awk '{print $1}')"
             else
-              ACTUAL="$(shasum -a 256 "$TMP_YQ" | awk '{print $1}')"
+              ACTUAL_SHA="$(shasum -a 256 "${TMP_YQ}" | awk '{print $1}')"
             fi
-            if [[ "$ACTUAL" != "$EXPECTED" ]]; then
-              echo "yq checksum mismatch" >&2
+            if [[ "${ACTUAL_SHA}" != "${EXPECTED_SHA}" ]]; then
+              echo "yq checksum mismatch for ${YQ_VERSION_TRIMMED}" >&2
               exit 1
             fi
-            install -m 0755 "$TMP_YQ" "$HOME/.local/bin/yq"
+            install -m 0755 "${TMP_YQ}" "$HOME/.local/bin/yq"
+            cleanup
             trap - EXIT
-            rm -f "$TMP_YQ" "$TMP_SHA"
+            ACTUAL="$( "$HOME"/.local/bin/yq --version 2>/dev/null || true)"
+            EXPECTED_VERSION_PREFIX="yq (https://github.com/mikefarah/yq/) version v${YQ_VERSION_TRIMMED}"
+            if [[ "${ACTUAL}" != "${EXPECTED_VERSION_PREFIX}"* ]]; then
+              echo "Failed to install yq v${YQ_VERSION_TRIMMED} (got: ${ACTUAL:-<empty>})" >&2
+              exit 1
+            fi
           fi
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
           yq --version
