--- a/.github/workflows/org-assets.yml
+++ b/.github/workflows/org-assets.yml
@@ -31,8 +31,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: actions/setup-python@v5
