--- a/.github/workflows/ci-shellcheck.yml
+++ b/.github/workflows/ci-shellcheck.yml
@@ -2,6 +2,10 @@ name: ci-shellcheck
 permissions:
   contents: read
 
+defaults:
+  run:
+    shell: bash --noprofile --norc -euo pipefail {0}
+
 on:
   push:
     paths:
@@ -16,9 +20,9 @@ on:
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
 
       - name: Install ShellCheck
         run: sudo apt-get update -yqq && sudo apt-get install -yqq shellcheck
