--- a/.github/workflows/adr-lint.yml
+++ b/.github/workflows/adr-lint.yml
@@ -1,6 +1,9 @@
 name: adr-lint
 permissions:
   contents: read
+concurrency:
+  group: adr-lint-${{ github.ref }}
+  cancel-in-progress: true
 
 defaults:
   run:
@@ -15,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
+      - uses: actions/checkout@v4 # actions/checkout@v4
       - name: Check filenames & headers
         run: |
           fail=0
