--- a/.github/workflows/ci-shellcheck.yml
+++ b/.github/workflows/ci-shellcheck.yml
@@ -1,6 +1,9 @@
 name: ci-shellcheck
 permissions:
   contents: read
+concurrency:
+  group: ci-shellcheck-${{ github.ref }}
+  cancel-in-progress: true
 
 defaults:
   run:
@@ -22,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
+      - uses: actions/checkout@v4 # actions/checkout@v4
 
       - name: Install ShellCheck
         run: sudo apt-get update -yqq && sudo apt-get install -yqq shellcheck
