--- a/.github/workflows/reusable-ci.yml
+++ b/.github/workflows/reusable-ci.yml
@@ -27,7 +27,7 @@ jobs:
     timeout-minutes: 40
     steps:
       - name: Checkout
-        uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
+        uses: actions/checkout@v4 # actions/checkout@v4
 
       - name: Setup Just
         uses: extractions/setup-just@v2
