--- a/.github/workflows/reusable-validate-jsonl.yml
+++ b/.github/workflows/reusable-validate-jsonl.yml
@@ -49,7 +49,7 @@ jobs:
     timeout-minutes: 40
     steps:
       - name: Checkout caller repo
-        uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # actions/checkout@v4
+        uses: actions/checkout@v4 # actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@5e221d4786ffb21088b21dfc9c80efb16b52cd3b # v4.0.2
