fix: set lychee verbose flag as boolean

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-# Linked ADR: docs/adrs/ADR-0001-toolchain-strategy.md
+# Linked ADR: docs/adrs/003-ci-reusables-pinning.md
 
 permissions:
   contents: read  # Limit default token scope for least privilege.
@@ -13,6 +13,7 @@ on:
       - '**/*.py'
       - '**/pyproject.toml'
       - 'Justfile'
+      - '.lychee.toml'
       - 'scripts/**'
       - '.github/workflows/ci.yml'
       - 'toolchain.versions.yml'
@@ -23,6 +24,7 @@ on:
       - '**/*.py'
       - '**/pyproject.toml'
       - 'Justfile'
+      - '.lychee.toml'
       - 'scripts/**'
       - '.github/workflows/ci.yml'
       - 'toolchain.versions.yml'
@@ -58,8 +60,8 @@ jobs:
       RUSTDOCFLAGS: "-Dwarnings"
     steps:
       - name: Checkout repository
-        # Use the stable v4 release to ensure the action is available.
-        uses: actions/checkout@v4
+        # Pin to v4.2.2 for reproducibility & supply-chain safety.
+        uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3
         with:
           fetch-depth: 0
           persist-credentials: false
