--- a/templates/.wgx/profile.yml
+++ b/templates/.wgx/profile.yml
@@ -21,5 +21,5 @@ rules:
   reconcile:
     prefer: canonical
     exceptions:
-      - pattern: "docs/adr/**"
+      - pattern: "docs/adrs/**"
         prefer: improved_field_version
