--- a/.github/workflows/agents-ci.yml
+++ b/.github/workflows/agents-ci.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@a5ac7e54b508e203cb80d02e7a928114292adde3 # v4.2.2
+      - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@b55428b3186412ab7664c751e0b43c43eb1cc02a # v5
         with:
