--- a/.github/workflows/org-assets.yml
+++ b/.github/workflows/org-assets.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - uses: actions/cache@13c3b5c0b52e77e8fa7b4e3d6a238602b25e9a3a # actions/cache@v4.0.2 (pinned)
+      - uses: actions/cache@v4
         with:
           path: |
             ~/.cache/uv
